Section 2 and more references

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -125,3 +125,24 @@
   author={Barrdear, John and Kumhof, Michael},
   year={2016}
 }
+
+@article{report,
+	title={The state of stablecoins},
+	author={Blockchain},
+	year={2018}
+}
+
+@misc{euromoney,
+	Author = {Peter Lee},
+	Howpublished = {\url{ https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will-change-how-money-works?copyrightInfo=true}},
+	Title = {Forget bitcoin: stablecoins will change how money works},
+	Note = {Accessed: 2018-10-29},
+	Year = {2018}}	
+
+@misc{coinsexplained,
+	Author = {Lukas Schor},
+	Howpublished = {\url{ https://medium.com/@argongroup/stablecoins-explained-206466da5e61
+	}},
+	Title = {Stablecoins Explained},
+	Note = {Accessed: 2018-10-29},
+	Year = {2018}}
