--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -54,29 +54,61 @@ https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will
 As mentioned in the ..., currencies can serve as a store of value, a unit of account, and a medium of exchange~\cite{smithin2002money}. In order to serves as a unit of account and store of value, currencies have to denote a minimum level of value stability. In this regard, stable coins are proposed to provide store of value and unit of account functionalities, due to their non-fluctuating value in terms of fiat currencies or any other alternative. In addition, they purport to solve a group of critical issues that were introduced when using cryptocurrencies introduce. In this section, we discuss these issues.
 
 \subsection{Cryptocurrencies as Medium of Exchange}
-from the blockchain paper:At present, any business would take a significant risk accepting cryptocurrencies as a medium of exchangedue to the significant volatility of this asset class. Stablecoins hold the potential to help unlock the use ofcryptocurrencies for day-to-day payments for businesses and commerce as price stability is a key missingelement for the adoption of cryptocurrencies by merchants and retailers all over the world.Companies need a degree of certainty about their short-term cash reserves and revenues. Transactingin ether or bitcoin would make the role of a treasurer a difficult task as the business?s runway (how longthe company can survive if income and expenses stay constant) could adversely shift in an instant due tounfavorable market swings.
+Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company to provide the staff incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve greatly as a medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies.
+
 
 \subsection{Cryptocurrencies as Unit of Account}
-from the blockchain paper:The unit of account is the measure by which goods and services are priced and a necessary feature for agiven asset to become ?money?. In the US, retailers price goods in USD, employees are paid in USD by theiremployers, profits/losses and assets/liabilities are denominated in USD. There is currently no agreementregarding the intrinsic value (and future value) of a given cryptocurrency, meaning accepting bitcoin as a?unit? is therefore problematic.Stablecoins can be pegged to established units of accounts in their respective countries and can thusbecome a digital representation of the unit of account (so long as the peg is maintained). Given theiremphasis on price stabilty and the ability to peg stablecoins to inflation, stablecoins also arguably have agreater chance of becoming an independent unit of account in the longer-term.
+from the blockchain paper:
+The unit of account is the measure by which goods and services are priced and a necessary feature for a
+given asset to become ?money?. In the US, retailers price goods in USD, employees are paid in USD by their
+employers, profits/losses and assets/liabilities are denominated in USD. There is currently no agreement
+regarding the intrinsic value (and future value) of a given cryptocurrency, meaning accepting bitcoin as a
+?unit? is therefore problematic.
+Stablecoins can be pegged to established units of accounts in their respective countries and can thus
+become a digital representation of the unit of account (so long as the peg is maintained). Given their
+emphasis on price stabilty and the ability to peg stablecoins to inflation, stablecoins also arguably have a
+greater chance of becoming an independent unit of account in the longer-term.
 
 \subsection{Cryptocurrencies as Store of Value}
 from the blockchain paper:
-A store of value is a commodity, asset, or money that retains its purchasing power or value into the future.Some view cryptoassets including bitcoin as too volatile to be commonly accepted as a store of value.Some companies need to hedge themselves over the long-term. For example, miners are currently highlyexposed to the price of the cryptoasset they receive in return for computing resources. A stable reserve ofliquid assets is needed to cover one-off additional fixed costs (such as purchasing hardware) and on-goingvariable costs (such as electricity).In the current crypto ecosystem, volatility risk is currently being highlighted in fundraising via Initial CoinOfferings (?ICOs?). Projects generally raise a given amount of ether to allocate resources in order to deliveron their promises. Due to the high level of friction associated with converting cryptoassets into fiat,founding teams tend to hold most of their funds in ether. In a bear market associated with falling priceslike the present one, management would have to meet investor expectations while suddenly having lesscapital at their disposal. Stablecoins could thus help founding teams of ICO projects manage their fundingmore saftely over the long-term.
+A store of value is a commodity, asset, or money that retains its purchasing power or value into the future.
+Some view cryptoassets including bitcoin as too volatile to be commonly accepted as a store of value.
+Some companies need to hedge themselves over the long-term. For example, miners are currently highly
+exposed to the price of the cryptoasset they receive in return for computing resources. A stable reserve of
+liquid assets is needed to cover one-off additional fixed costs (such as purchasing hardware) and on-going
+variable costs (such as electricity).
+In the current crypto ecosystem, volatility risk is currently being highlighted in fundraising via Initial Coin
+Offerings (?ICOs?). Projects generally raise a given amount of ether to allocate resources in order to deliver
+on their promises. Due to the high level of friction associated with converting cryptoassets into fiat,
+founding teams tend to hold most of their funds in ether. In a bear market associated with falling prices
+like the present one, management would have to meet investor expectations while suddenly having less
+capital at their disposal. Stablecoins could thus help founding teams of ICO projects manage their funding
+more saftely over the long-term.
 
 \subsection{dApps}
 from the blockchain paper:
-In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocollayers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t beincentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). Thisshould in turn increase the token velocity and fulfil the potential of decentralised networks.dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeablefuture. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
+In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocol
+layers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.
+Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t be
+incentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). This
+should in turn increase the token velocity and fulfil the potential of decentralised networks.
+dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeable
+future. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.
+Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
 
 \subsection{Lending with Cryptocurrencies}
 Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time.
 
-\subsection{Government Surveillance}
-
-Governments have recently started examining  the idea of issuing a central bank-issued digital currency (CBDC)~\cite{barrdear2016macroeconomics}. These national digital currencies are regulated by federal regulators instead of serving in a form of decentralized currencies-- where only the owner has the sole control and ownership of the assets. CBDCs are not backed by any tangible assets and are issued by central banks so that they could keep their monetary policy while adopting the trend of digital assets. However, an oppressive government may abuse these assets to manipulate the markets or to limit the ownership of these assets to  a special group of people (\eg citizens of that specific country). However, since stable coins are not backed by any central party and financial regulator, users are assured about the stability as well as having easier access no matter where they live and/or come from.
+%\subsection{Government Surveillance}
+%
+%Governments have recently started examining  the idea of issuing a central bank-issued digital currency (CBDC)~\cite{barrdear2016macroeconomics}. These national digital currencies are regulated by federal regulators instead of serving in a form of decentralized currencies-- where only the owner has the sole control and ownership of the assets. CBDCs are not backed by any tangible assets and are issued by central banks so that they could keep their monetary policy while adopting the trend of digital assets. However, an oppressive government may abuse these assets to manipulate the markets or to limit the ownership of these assets to  a special group of people (\eg citizens of that specific country). However, since stable coins are not backed by any central party and financial regulator, users are assured about the stability as well as having easier access no matter where they live and/or come from.
 
 \subsection{Remittance}
 from the blockchain paper:
-Stablecoins eliminate price volatility risk as crypto payments are being processed. To stay relevant in thiscontext, transactions would have to be confirmed rapidly (ideally in a matter of seconds) to provide a gooduser experience and a noteworthy improvement compared to transfers relying on the current underlyingbanking infrastructure (international banking transfers currently take up to three days).
+Stablecoins eliminate price volatility risk as crypto payments are being processed. To stay relevant in this
+context, transactions would have to be confirmed rapidly (ideally in a matter of seconds) to provide a good
+user experience and a noteworthy improvement compared to transfers relying on the current underlying
+banking infrastructure (international banking transfers currently take up to three days).
 
 % nation issued digital assets can be
 %
@@ -113,15 +145,15 @@ Stablecoins eliminate price volatility risk as crypto payments are being process
 %https://www.bankofcanada.ca/wp-content/uploads/2017/11/sdp2017-16.pdf
 
 
-\subsection{Promoting Trust in the Crypto Space}
-Discussion on Paxos, Gemini vs Tether. How having monthly attestations increase the reliability of Paxos and Gemini?
-
-For a stablecoin to consistently trade at par, its issuer must, in effect, convince a wide a community of future tokenholders of its future solvency. And that degree of trust can be hard to maintain, as it involves the psychology of the market, which can shift significantly over time.
-Consider Tether's predicament. Whether it has the funds it says it has isn't the only question. The other, perhaps even more important, is whether the market believes those commitments will hold up against a wider environment of waning confidence.
-
-For reserves-backed stablecoins, this includes practices such as: naming the banking relationship so that users can properly assess the underlying counterparty risk; committing to independent security audits of the underlying code to show that tokens are destroyed when funds are redeemed; holding regular attestations of the firms' balances by trusted third-party auditors. (Note: this does not mean a full "audit" per se. Calls for an audit of Tether were misleading; there is no way that a crypto system's past transactions can be audited in the traditional sense. Instead, proofs rely on attestations as to the accuracy of the firm's claims about its balances at a point in time.)
-
-(https://www.coindesk.com/the-delicate-psychology-of-stablecoins/)
+%\subsection{Promoting Trust in the Crypto Space}
+%Discussion on Paxos, Gemini vs Tether. How having monthly attestations increase the reliability of Paxos and Gemini?
+%
+%For a stablecoin to consistently trade at par, its issuer must, in effect, convince a wide a community of future tokenholders of its future solvency. And that degree of trust can be hard to maintain, as it involves the psychology of the market, which can shift significantly over time.
+%Consider Tether's predicament. Whether it has the funds it says it has isn't the only question. The other, perhaps even more important, is whether the market believes those commitments will hold up against a wider environment of waning confidence.
+%
+%For reserves-backed stablecoins, this includes practices such as: naming the banking relationship so that users can properly assess the underlying counterparty risk; committing to independent security audits of the underlying code to show that tokens are destroyed when funds are redeemed; holding regular attestations of the firms' balances by trusted third-party auditors. (Note: this does not mean a full "audit" per se. Calls for an audit of Tether were misleading; there is no way that a crypto system's past transactions can be audited in the traditional sense. Instead, proofs rely on attestations as to the accuracy of the firm's claims about its balances at a point in time.)
+%
+%(https://www.coindesk.com/the-delicate-psychology-of-stablecoins/)
 
 %to be completed >> @Mahsa
 
@@ -135,9 +167,9 @@ For reserves-backed stablecoins, this includes practices such as: naming the ban
 %
 %https://medium.com/@usdx/five-issues-confronting-stablecoins-for-the-rest-of-2018-75245820fdb5
 
-\subsection{Smart Insurance}
-combine programmability + stability > when the flight gets cancelled or delayed the smart contract will \textbf{automatically} pay the passengers. In this situation, an stable coin is needed.
-from the blockchain report: In travel and many other smart insurance use cases, it would be preferable to denominate the smart contract with a stablecoin rather than a more volatile cryptocurrency, such as ether (ETH). Generally, people take out insurance to reduce risk and would therefore want smart contract insurance underpinned by a stable currency.
+%\subsection{Smart Insurance}
+%combine programmability + stability > when the flight gets cancelled or delayed the smart contract will \textbf{automatically} pay the passengers. In this situation, an stable coin is needed.
+%from the blockchain report: In travel and many other smart insurance use cases, it would be preferable to denominate the smart contract with a stablecoin rather than a more volatile cryptocurrency, such as ether (ETH). Generally, people take out insurance to reduce risk and would therefore want smart contract insurance underpinned by a stable currency.
 
 \textit{Other possible solutions to lending:} ~\textblue{While stable coin is one of them what can be the other possible solutions?}
 
