Cryptocurrencies as Unit of Account

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -65,22 +65,10 @@ As mentioned in the ..., currencies can serve as a store of value, a unit of acc
 
 
 \subsection{Cryptocurrencies as Medium of Exchange} 
-Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company to provide the staff incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve greatly as a medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies. ~\textblue{Taken from the blockchain report but in my own words.}
-
-
-
+Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company employers to provide the employees incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve greatly as a medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies. ~\textblue{Taken from the blockchain report but in my own words.}
 
 \subsection{Cryptocurrencies as Unit of Account}
-from the blockchain paper:
-The unit of account is the measure by which goods and services are priced and a necessary feature for a
-given asset to become ?money?. In the US, retailers price goods in USD, employees are paid in USD by their
-employers, profits/losses and assets/liabilities are denominated in USD. There is currently no agreement
-regarding the intrinsic value (and future value) of a given cryptocurrency, meaning accepting bitcoin as a
-?unit? is therefore problematic.
-Stablecoins can be pegged to established units of accounts in their respective countries and can thus
-become a digital representation of the unit of account (so long as the peg is maintained). Given their
-emphasis on price stabilty and the ability to peg stablecoins to inflation, stablecoins also arguably have a
-greater chance of becoming an independent unit of account in the longer-term.
+One of the most necessary functions of money is to serve as a unit of account-- the common measure that sets price to goods and services. Fiat currencies, \eg US dollar, Pound \etc serve this functionality correctly so they are used as units of accounts in the US and Europe respectively. Unfortunately, cryptocurrencies such as BTC, which do not have a stable price and value, do not seem to be used as a unit of account hence will not be able to serve as \textit{money} and replace the fiat currencies. However, given the price stability that stable coins offer, they have higher chance to be used as a digital representation of a unit of account and hence replace fiat.
 
 \subsection{Cryptocurrencies as Store of Value}
 from the blockchain paper:
