A few notes on discussion and intro

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -8,6 +8,8 @@ Short-term stability is important for transactions and long-term stability is im
 
 currencies are judged by their ability to serve three functions???as a medium of exchange, a unit of account, and a store of value. To successfully serve these functions, a currency must be easily and broadly usable (necessary for being a medium of exchange) and demonstrate at least some level of value stability (necessary for acting as a unit of account and store of value).
 
+More on these functions in https://hackernoon.com/overview-of-stablecoins-2e4ffef82a73
+
 ~\textit{Discussion on how a stablecoin can be adopted by the majority and the comparison between other cryptocurrencies:}
 Rightly or wrongly, volatile cryptocurrencies like bitcoin are not viewed by many central bankers as a serious
 competitive threat to their own national currencies. However, a stablecoin of sufficient size and use may
@@ -233,6 +235,12 @@ broader world beyond the digital assets ecosystem really need (or want) stableco
 
 -Discussion about collateralization: The second type of stable coin is partly collateralized. In this case, the platform holds dollars equal to, say 50\%, of the value of the coins in circulation.The problem with this variant will be familiar to any monetary policy maker whose central bank has sought to peg an exchange rate while holding reserves that are only a fraction of its liabilities.
 If some coin owners harbor doubts about the durability of the peg, they will sell their holdings. The platform will have to purchase them using its dollar reserves to keep their price from falling. But, because the stock of dollar reserves is limited, other investors will scramble to get out before the cupboard is bare. The result will be the equivalent of a bank run, leading to the collapse of the peg.
+
+--A discussion about the price comparisons between the stablecoins  https://www.coindesk.com/which-stablecoin-is-the-riskiest-the-crypto-market-is-pricing-that-in/
+
+--speculative attacks on pegged exchange rates https://www.marketwatch.com/story/your-crypto-stable-coin-isnt-tethered-to-anything-2018-09-12
+
+--Ametrano's paper on currency design (the one that inspired Fragments) argues that we shouldn't peg a stablecoin to the U.S. dollar, as its days of stability may be numbered. Ametrano's preferred benchmark is a basket of commodities. ~\cite{cryptoinsider}
 
 \section{Discussion}
 %%https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-whitepaper.pdf -> ref
