--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -203,12 +203,11 @@ Define the properties that are considered during the design of stable coins.
 		& Collateralization  & Price Oracle & Centralization & Feedback Mechanism
 		\\ &(+ the value of the collateral)&&&
 		 \\ \hline
-		BitShares (BitUSD) &  Crypto-collateralized &  No & &\\ \hline
+		BitShares (BitUSD) &  Crypto-collateralized &  & &\\ \hline
 		BitBay & Non-collateralized & & & \\ \hline
 		 DAI& Crypto-collateralized (ETH)  &  Yes& No & Target Price, Target rate,\\
 		 &&&&Sensitivity Parameter,\\
 		 &&&&Global Settlement \\ \hline
-		 BitShares&Crypto-collateralized&Yes&&\\ \hline
 		 Basis&Non-collateralized&& &\\ \hline
 		 Tether & Fiat-collateralized (USD) & & Yes &\\ \hline
 		  &&&& \\ \hline
@@ -218,6 +217,7 @@ Define the properties that are considered during the design of stable coins.
 Decentral price oracle and Schelling point~\cite{cryptoinsider}
 DAI and Bitshares~\cite{cryptoinsider}
 Feedback column from ~\cite{report}
+Bitbay: One of the most unstable stablecoins~\cite{report}.
 
 Today, it would appear that prioritization of automation/transparency generally carries with it the trade-off of greater stability complexity (i.e., risk that the peg will be broken). In other words, the more decentralized the stablecoin design, the less likely it is to remain price stable against a peg like the US dollar. The success of Tether offers at least some evidence that so far the market has prioritized stability over
 decentralization (i.e., transparency and automation).Anyone who prioritizes
